29 September 2008: Matthijs
	- Bugfix: only normalize dnames in rdatas when rrtype is listed in RFC 
		4034, section 6.2: Canonical RR Form.
	- Update TODO list

25 September 2008: Matthijs
	- Fix bug where hmac-sha256 was in algorithm table, but could not be 
		retrieved by name or id.
	- Additional arguments for nsd-notify and nsd-xfer: set outgoing 
		hostname/ip-address and source port.
	- Additional TODO entry: optimize code in nsd-* programs.

8 September 2008: Matthijs
	- RFC 4635, bugfix #130: support for hmac-sha1 and hmac-sha256 tsig 
		algorithms.
	- modify and add tpkg tests for hmac-sha1 algorithms.

2 September 2008: Matthijs
	- AXFR fallback when IXFR/UDP failed on all masters
	- Bugfix: strip off chroot value in corner cases
	- Additional debug and verbose log messages

29 August 2008: Matthijs
	- IXFR allow UDP option

26 August 2008: Matthijs
	- Code layout, additional comments and documentation typo fixes
	- IXFR over TCP, no longer UDP

17 July 2008: Matthijs
	- Make the maximum number of interfaces configurable.
	- Write pidfile *after* succesfull server initialization,
		instead of writing, and unlink if fail.

16 July 2008: Matthijs
	- Set upcoming release to 3.1.1
	- Wouter: fixed memory leaks that happened on error, mostly on
	  zone transfer errors.

11 July 2008: Matthijs
	- Avoid race condition in nsdc: let nsd server update pidfile before 
		closing old parent process. 

8 July 2008: Jelte
	- Fixed NSEC3 memory leak in the case NSEC3 is not needed.

7 July 2008: Matthijs
	- Bugfix #191

9 June 2008: Matthijs
	- When comparing RRs, do not compare TTL values (since the same record
	  with different TTL values are considered equal).
	- Fixup some more unaligned memory access that could occur when 
	  reading ixfr.db.

19 May 2008: Matthijs
	- Do not always log tcp read errors, only when real error or high verbosity

28 April 2008: Matthijs
	- Bugfix #172 (misleading error from zonec)

27 March 2008: Matthijs