@@ -94,11 +94,8 @@ zone:
 	allow-notify: 168.192.44.42 mskey
 	request-xfr: 168.192.44.42 mskey
 
-	# set local interface for zone transfer requests, use port 5200.
-	# in case of master 1, the xfr request will go:
-	#	from 10.0.0.10@5200
-	#	to 168.192.44.42@port (53 or configured port number)
-	outgoing-interface: 10.0.0.10@5200
+	# set local interface for sending zone transfer requests.
+	outgoing-interface: 10.0.0.10
 
 	# master 2
 	allow-notify: 10.0.0.11 NOKEY
@@ -131,11 +128,8 @@ zone:
 	notify: 10.0.0.14@5300 sec1_key
 	provide-xfr: 10.0.0.14@5300 sec1_key
 
-	# set local interface for notifies, use port 5200.
-	# in case of secondary 1, the notify will go:
-	#	from 10.0.0.15@5200 
-	#	to 10.0.0.14@5300
-	outgoing-interface: 10.0.0.15@5200
+	# set local interface for sending notifies
+	outgoing-interface: 10.0.0.15
 
 	# secondary 2. 
 	notify: 10.11.12.14 sec2_key
